# talkie-core

./: .gitignore  CHANGELOG.md  Dockerfile.web  FEATURES_OVERVIEW.md  MODULES.md  Pipfile  README.md  compose.production.yaml  compose.yaml  config.py  config.yaml  config.yaml.example  github_app_token.py  history_cmd.py  install.sh  marketplace.py  module_cmd.py  pyproject.toml  requirements.txt  run.py  run_module_server.py  run_web.py  start.sh  talkie  talkie.code-workspace
.github/: dependabot.yml
app/: __init__.py  audio_utils.py  pipeline.py  web_capture.py
audio/: capture.py  constants.py  device_utils.py  level.py
calibration/: __init__.py  analyzer.py  recorder.py
consul/: consul.hcl
curation/: __init__.py  __main__.py  curator.py  export.py  scheduler.py
docs/: MODULES-SPLIT-REPOS-PLAN.md  MODULE_SUBMODULES_MIGRATION.md  SDK.md  Testing.md
haproxy/: haproxy.cfg
llm/: __init__.py  client.py  prompts.py
modules/: README.md  discovery.py
persistence/: __init__.py  database.py  history_repo.py  schema.sql  settings_repo.py  training_repo.py
profile/: __init__.py  builder.py  constants.py  personalization_constants.py  store.py
rag/: __init__.py  chunk.py  embed.py  pdf.py  store.py
rifai_scholar_downloader/: README.md  __init__.py  citations.py  cli.py  downloader.py  io_utils.py  pdf_discovery.py  scholar_client.py
sdk/: __init__.py  abstractions.py  audio_utils.py  config.py  discovery.py  logging.py
speaker/: __init__.py  base.py  noop_filter.py
stt/: __init__.py  base.py  vosk_engine.py  whisper_engine.py
tests/: __init__.py  (+32 more)
(+40 files in other folders)
