[project]
name = "talkie-core"
version = "0.1.0"
description = "Local voice-first communication app"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.coverage.run]
source = ["app", "config", "llm", "persistence", "profile", "curation", "modules", "sdk"]
omit = [
    "run_web.py",
    "run.py",
    "run_module_server.py",
    "*/__init__.py",
]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
